--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,5 +1,5 @@
-<site-notes></site-notes>
-<simple-summary-stats></simple-summary-stats>
+<!-- <site-notes></site-notes>
+<simple-summary-stats></simple-summary-stats> -->
 <!-- summary-stats></summary-stats -->
 
 <div class="row">
